# version-checker

./: .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  404.html  LICENSE  README.md  index.html  mkdocs.yml  pyproject.toml  tox.ini
.github/workflows/: style_check.yml  tox.yml  unit_tests.yml
docs/: index.md
search/: search_index.json
tests/: conftest.py  test_version_checker.py  utils.py
version_checker/: __main__.py  main.py  settings.py
