[tool.poetry]
name = "version-checker"
version = "0.2.0"
description = ""
authors = ["Jorge Alvarado <alvaradosegurajorge@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pre-commit = "^2.16.0"
loguru = "^0.5.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pytest-cov = "^3.0.0"
flake8 = "^4.0.1"
black = "^21.12b0"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
version-checker = "version_checker.main:main"

[tool.isort]
profile = "black"
