[tool.poetry]
name = "version-checker"
version = "0.5.0"
description = ""
authors = ["Jorge Alvarado <alvaradosegurajorge@gmail.com>"]
readme = "README.md"
license = "MIT"
homepage = "https://jalvaradosegura.github.io/version-checker/"
repository = "https://github.com/jalvaradosegura/version-checker"

[tool.poetry.dependencies]
python = "^3.7"
pre-commit = "^2.16.0"
loguru = "^0.5.3"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
pytest-cov = "^3.0.0"
flake8 = "^4.0.1"
black = "^21.12b0"
isort = "^5.10.1"
mypy = "^0.931"
tox = "^3.24.5"
tox-py = "^1.2.0"
mkdocs-material = "^8.1.8"
typing-extensions = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
version-checker = "version_checker.main:main"

[tool.isort]
profile = "black"

[[tool.mypy.overrides]]
module = "tests.*"

[tool.coverage.run]
omit = ["version_checker/__main__.py"]

[tool.tox]
legacy_tox_ini = """
[tox]
isolated_build = True
envlist = py37, py38, py39, py310

[testenv]
deps = pytest
commands = pytest

"""
